# colossal

./: README.md  pyproject.toml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
colossal/: __init__.py  jinja_encoding.py  macros_encoding.py
colossal/macros/: __init__.py
tests/: test_jinja_encoding.py  test_macros_encoding.py  utils.py
