[tool.poetry]
name = "colossal"
version = "0.1.0"
description = ""
authors = ["d1618033 <d1618033@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
